# JHuntAutomator

./: .gitignore  .replit  CHANGELOG_SUMMARY.md  PROJECT_SUMMARY.md  README.md  jobs.db  jobs.db-shm  jobs.db-wal  pyproject.toml  replit.md  requirements.txt  start.sh
.github/workflows/: daily-crawl.yml
attached_assets/: Full-Stack Automated IT Job Search System – Project Plan (Updated)_1761680209803.docx
backend/: api_debug.py  config.py  crawl_runner.py  crawler.py  database.py  gmail_client.py  http_client.py  linkedin_email_ingest.py  main.py  models.py  nlp.py  notifications.py  runner.py  scheduler.py  schemas.py
backend/crawl_engine/: dedupe.py  engine.py  errors.py  fetcher.py  metrics.py  normalize.py  query_utils.py  state.py  types.py
backend/sources/: glassdoor.py  linkedin.py  naukri.py  remote_co.py  remotive.py  shine.py  timesjobs.py  wellfound.py  workingnomads.py  yc.py
docs/: crawler.md  crawler_v2.md  crawling_compliance.md  linkedin.md  troubleshooting.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: FilterBar.tsx  JobCard.tsx
frontend/docs/: turbopack-debug.md
frontend/frontend/: package-lock.json
frontend/lib/: api.ts
tests/: conftest.py  test_api_sources.py  test_crawlers.py  test_database_and_scheduler.py  test_dedupe_and_scoring.py  test_engine_cursor.py  test_engine_stop_on_seen.py  test_html_sources.py  test_http_client_conditional.py  test_linkedin.py  test_pipeline_dedupe.py  test_query_utils.py  test_runs.py  test_scoring.py
tests/fixtures/: greenhouse.json  (+8 more)
(+3 files in other folders)
