[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.1",
    "lxml>=5.4.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]
